css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.d-flex{
  display: flex;
}

body{
  background-color: black;
}

.debug{
  border: 1px solid red;
}

.wrap{
  flex-wrap: wrap;
}

header div{
  cursor: pointer;
}

/* HEADER */

header{
  height: 50px;
  position: relative;
}

header .button{
  display: flex;
  color: white;
  flex-wrap: wrap;
  justify-content: flex-end;
}

header .button .speaker, .expand{
  background-color: gray;
  align-items: center;
  padding: 3px;
  border-radius: 5px;
  margin: 3px;
}

/* MAIN */

main{
  height: calc(100vh - 140px);
  overflow: auto;
  max-width: 100vw;
  flex-wrap: wrap;
  margin: 0 10px;
}

main .pic{
  position: relative;
  margin: 10px 5px;
  
}

main .pic .name{
  position: absolute;
  left: 0;
  top: 122px;
  background-color: rgba(101, 97, 102, 0.6);
  color: white;
  padding: 5px;
}

/* FOOTER */

footer{
  height: 80px;
  background-color: #222222;
  justify-content: space-between;
  color: white;
  max-width: 100vw;
  align-items: center;
}

footer nav ul li{
  list-style: none;
}

footer .menu{
  padding: 10px;
  
  text-align: center;
}

footer .menu .video{
  margin: 0 30px;
}

footer .menu p{
  font-size: 0.8rem;
  padding-top: 5px;
}

footer .menu i{
  font-size: 25px;
}

footer .menu .chev i{
  font-size: 15px;
  margin: 20px 10px 0 10px;
}

footer .menu .center .invite, .manage, .polling, .share, .chev, .chat, .record, .break, .more{
  margin: 0 15px;
}

footer .menu .active i{
  color: green;
}


footer .menu-end{
  color: red;
  background-color: #4a4a4a ;
  height: 100%;
  width: 120px;
  justify-content: center;
  align-items: center;
}

footer .menu-end p{
  justify-content: center;
  align-items: center;
}

footer div{
  cursor: pointer;
}

